# oils

editors/vscode-ysh/: .envrc  .gitignore  .vscodeignore  CHANGELOG.md  README.md  flake.nix  language-configuration.json  package.json  tsconfig.json
editors/vscode-ysh/server/: package-lock.json  package.json  tsconfig.json
editors/vscode-ysh/server/src/: completion.ts  definition.ts  hover.ts  parser.ts  server.ts  sources.ts  symbols.ts
editors/vscode-ysh/server/src/__tests__/: parser.test.ts
editors/vscode-ysh/server/src/__tests__/fixtures/: caddy.ysh  simple.ysh
editors/vscode-ysh/server/src/__tests__/fixtures/lib/: config.ysh
editors/vscode-ysh/snippets/: ysh.json
editors/vscode-ysh/src/: extension.ts
editors/vscode-ysh/syntaxes/: ysh.tmLanguage.json
editors/vscode-ysh/tree-sitter-ysh/: README.md  binding.gyp  grammar.js  package.json
editors/vscode-ysh/tree-sitter-ysh/bindings/node/: binding.cc  index.d.ts  index.js
editors/vscode-ysh/tree-sitter-ysh/bindings/rust/: Cargo.toml  build.rs  lib.rs
editors/vscode-ysh/tree-sitter-ysh/queries/: highlights.scm  injections.scm  locals.scm  tags.scm
editors/vscode-ysh/tree-sitter-ysh/src/: scanner.c
editors/vscode-ysh/tree-sitter-ysh/test/corpus/: control_flow.txt  declarations.txt  functions.txt  strings.txt
